# heya

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  config.example.toml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
heya/: __init__.py  agent.py  agent_defs.py  approval.py  attachments.py  background.py  config.py  context.py  credentials.py  diagnosis.py  hooks.py  init.py  llm_client.py  main.py  mcp_callbacks.py  mcp_oauth.py  mcp_runtime.py  memory.py  netsafety.py  plugins.py  preflight.py  process.py  project.py  remediation.py  reproduction.py  review.py  sessions.py  skills.py  subagents.py  text.py  tomlw.py  tools.py  tools_browser.py  tools_files.py  tools_guidance.py  tools_mcp.py  tools_web.py  tools_wp.py  triage.py  ui.py  (+3 more)
site/: app.js  build_docs.py  docs.css  docs.js  index.html  privacy.html  styles.css
tests/: test_agent.py  test_agent_defs.py  test_approval.py  test_approval_hardening.py  test_attachments.py  test_background.py  test_background_integration.py  test_build_docs_version.py  test_config.py  test_context.py  test_context_integration.py  test_credentials.py  test_diagnosis.py  test_dispatch_never_raises.py  test_guidance_refs.py  test_hooks.py  test_init.py  test_llm_client.py  test_llm_client_retry.py  test_main.py  test_mcp_callbacks.py  test_mcp_integration.py  test_mcp_oauth.py  test_mcp_runtime.py  test_memory.py  test_memory_integration.py  test_netsafety.py  test_packaging.py  test_parallel_subagents_integration.py  test_plugins.py  test_preflight.py  test_process.py  test_project.py  test_remediation.py  test_reproduction.py  test_review.py  test_review_integration.py  test_sessions.py  test_skills.py  test_smoke.py  (+18 more)
(+35 files in other folders)
