[project]
name = "heya"
version = "0.0.1"
description = "A single, local-first, tool-using AI agent."
requires-python = ">=3.13"
dependencies = ["httpx>=0.27", "beautifulsoup4>=4.12"]

[project.optional-dependencies]
browser = ["playwright>=1.40"]

[project.scripts]
heya = "heya.main:main"

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: hits a live model endpoint or external CLI/subprocess (run with: pytest -m integration)",
]
testpaths = ["tests"]
