[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "heya"
version = "0.0.1"
description = "A single, local-first, model-agnostic, tool-using AI agent."
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
authors = [{ name = "Shameem Reza" }]
keywords = ["ai", "agent", "cli", "local-first", "woocommerce", "wordpress", "support"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = ["httpx>=0.27", "beautifulsoup4>=4.12", "rich>=13"]

[project.urls]
Homepage = "https://github.com/shameemreza/heya"
Repository = "https://github.com/shameemreza/heya"

[project.optional-dependencies]
browser = ["playwright>=1.40"]

[project.scripts]
heya = "heya.main:main"

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: hits a live model endpoint or external CLI/subprocess (run with: pytest -m integration)",
]
testpaths = ["tests"]

[tool.setuptools]
packages = ["heya"]

[tool.setuptools.package-data]
heya = ["guidance/*.md"]
